rust/macros/tests/compile-fail/fat_arrow.rs
#![feature(plugin)]
#![plugin(flatbuffers_macros)]

extern crate flatbuffers_macros;

flatbuffers_object!{Table}
//~^ ERROR: Expected '=>'

fn main() {}
